--- a/index.html
+++ b/index.html
@@ -56,28 +56,30 @@
         </div>
     </div>
     <footer>
-        <div class="footer-column">
-            <img src="img/owlwhite.png" alt="Riot Act Owl" class="owl">
+        <div class="footer-main">
+            <div class="footer-column">
+                <img src="img/owlwhite.png" alt="Riot Act Owl" class="owl">
+            </div>
+            <div class="footer-column">
+                <h3>Learn More</h3>
+                <ul>
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                    <li><a href="#">Link 4</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Contact Us</h3>
+                <p>Email: example@example.com</p>
+                <p>Phone: 555-555-5555</p>
+            </div>
         </div>
-        <div class="footer-column">
-            <h3>Learn More</h3>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-                <li><a href="#">Link 4</a></li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>Contact Us</h3>
-            <p>Email: example@example.com</p>
-            <p>Phone: 555-555-5555</p>
+        <div class="footer-bottom">
+            <hr>
+            <p>&copy; 2023 Riot Act Media. All rights reserved.</p>
         </div>
     </footer>
-    <div class="footer-bottom">
-        <hr>
-        <p>&copy; 2023 Riot Act Media. All rights reserved.</p>
-    </div>
     <script>
     const hamburgerButton = document.querySelector('.hamburger-button');
     const closeButton = document.querySelector('.close-button');
