--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="home">
     <header>
         <div class="top-bar"></div>
         <nav class="hidden-navigation collapsed" style="transform: translateY(-100%)">
-            <a href="#">Current Releases</a>
-            <a href="#">Roster</a>
-            <a href="#">About Us</a>
+            <a href="current.html">Current Releases</a>
+            <a href="roster.html">Roster</a>
+            <a href="about.html">About Us</a>
             <a href="#">Work With Us</a>
             <a href="#">Testimonials</a>
             <div class="close-button"><img src="img/close.png" alt="Close menu"></div>
@@ -28,9 +28,9 @@
             <img src="img/logo.png" width="410" height="221">
         </div>
         <div class="navigation">
-            <a href="#">current releases</a>
-            <a href="#">roster</a>
-            <a href="#">about us</a>
+            <a href="current.html">current releases</a>
+            <a href="roster.html">roster</a>
+            <a href="about.html">about us</a>
             <a href="#">work with us</a>
             <a href="#">testimonials</a>
         </div>
