--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <div class="navigation">
             <a href="index.html">home</a>
             <a href="current.html">current releases</a>
-            <a href="roster.html">Roster</a>
+            <a href="roster.html">roster</a>
             <a class="active" href="about.html">about us</a>
             <a href="#">work with us</a>
             <a href="#">testimonials</a>
