--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             <a href="#">testimonials</a>
         </div>
         <div class="subheader-container">
-            <h2 class="subheader">Current Releases</h2>
+            <h2 class="subheader">about us</h2>
             <hr class="subheader-line">
         </div>
         <div class="summary">
