--- a/current.html
+++ b/current.html
@@ -13,13 +13,13 @@
     <header>
         <div class="top-bar"></div>
         <nav class="hidden-navigation collapsed" style="transform: translateY(-100%)">
-            <a href="index.html" class="">Home</a>
-            <a href="current.html" class="active">Current Releases</a>
-            <a href="roster.html">Roster</a>
-            <a href="about.html">About Us</a>
-            <a href="#">Work With Us</a>
-            <a href="#">Testimonials</a>
-            <div class="close-button"><img src="img/close.png" alt="Close menu"></div>
+            <a href="index.html" class="">home</a>
+            <a href="current.html" class="active">current releases</a>
+            <a href="roster.html">roster</a>
+            <a href="about.html">about us</a>
+            <a href="#">work with us</a>
+            <a href="#">testimonials</a>
+            <div class="close-button"><img src="img/close.png" alt="close menu"></div>
         </nav>
         <div class="hamburger-button"><img src="img/hamburder.png" alt="Hamburger Menu"></div>
         <!-- rest of header content -->
@@ -42,68 +42,68 @@
         </div>
         <div class="image-grid">
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/1.png"></a>
-                <a href="#" class="image-title">2nd Grade</a>
+                <a href="artist.html"><img src="img/artists/1.png"></a>
+                <a href="artist.html" class="image-title">2nd Grade</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/2.png"></a>
-                <a href="#" class="image-title">7ebra</a>
+                <a href="artist.html"><img src="img/artists/2.png"></a>
+                <a href="artist.html" class="image-title">7ebra</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/3.png"></a>
-                <a href="#" class="image-title">All Things Blue</a>
+                <a href="artist.html"><img src="img/artists/3.png"></a>
+                <a href="artist.html" class="image-title">All Things Blue</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/4.png"></a>
-                <a href="#" class="image-title">Anna Burch</a>
+                <a href="artist.html"><img src="img/artists/4.png"></a>
+                <a href="artist.html" class="image-title">Anna Burch</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/5.png"></a>
-                <a href="#" class="image-title">Anna McClellan</a>
+                <a href="artist.html"><img src="img/artists/5.png"></a>
+                <a href="artist.html" class="image-title">Anna McClellan</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/6.png"></a>
-                <a href="#" class="image-title">Attia Taylor</a>
+                <a href="artist.html"><img src="img/artists/6.png"></a>
+                <a href="artist.html" class="image-title">Attia Taylor</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/7.png"></a>
-                <a href="#" class="image-title">Bloodlines</a>
+                <a href="artist.html"><img src="img/artists/7.png"></a>
+                <a href="artist.html" class="image-title">Bloodlines</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/8.png"></a>
-                <a href="#" class="image-title">Blue Glass</a>
+                <a href="artist.html"><img src="img/artists/8.png"></a>
+                <a href="artist.html" class="image-title">Blue Glass</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/9.png"></a>
-                <a href="#" class="image-title">Blvck Hippie</a>
+                <a href="artist.html"><img src="img/artists/9.png"></a>
+                <a href="artist.html" class="image-title">Blvck Hippie</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/10.png"></a>
-                <a href="#" class="image-title">Bobbie Lovesong</a>
+                <a href="artist.html"><img src="img/artists/10.png"></a>
+                <a href="artist.html" class="image-title">Bobbie Lovesong</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/11.png"></a>
-                <a href="#" class="image-title">Body/Dilloway/Head</a>
+                <a href="artist.html"><img src="img/artists/11.png"></a>
+                <a href="artist.html" class="image-title">Body/Dilloway/Head</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/12.png"></a>
-                <a href="#" class="image-title">Bosque Brown</a>
+                <a href="artist.html"><img src="img/artists/12.png"></a>
+                <a href="artist.html" class="image-title">Bosque Brown</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/13.png"></a>
-                <a href="#" class="image-title">Blvck Hippie</a>
+                <a href="artist.html"><img src="img/artists/13.png"></a>
+                <a href="artist.html" class="image-title">Blvck Hippie</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/14.png"></a>
-                <a href="#" class="image-title">Bobbie Lovesong</a>
+                <a href="artist.html"><img src="img/artists/14.png"></a>
+                <a href="artist.html" class="image-title">Bobbie Lovesong</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/15.png"></a>
-                <a href="#" class="image-title">Body/Dilloway/Head</a>
+                <a href="artist.html"><img src="img/artists/15.png"></a>
+                <a href="artist.html" class="image-title">Body/Dilloway/Head</a>
             </div>
             <div class="image-container">
-                <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/artists/16.png"></a>
-                <a href="#" class="image-title">Bosque Brown</a>
+                <a href="artist.html"><img src="img/artists/16.png"></a>
+                <a href="artist.html" class="image-title">Bosque Brown</a>
             </div>
             <!-- Repeat for remaining images -->
         </div>
