--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <header>
         <div class="top-bar"></div>
         <nav class="hidden-navigation collapsed" style="transform: translateY(-100%)">
-            <a href="current.html">Current Releases</a>
-            <a href="roster.html">Roster</a>
-            <a href="about.html">About Us</a>
-            <a href="#">Work With Us</a>
-            <a href="#">Testimonials</a>
+            <a href="index.html" class="active">home</a>
+            <a href="current.html">current releases</a>
+            <a href="roster.html">roster</a>
+            <a href="about.html">about us</a>
+            <a href="#">work with us</a>
+            <a href="#">testimonials</a>
             <div class="close-button"><img src="img/close.png" alt="Close menu"></div>
         </nav>
         <div class="hamburger-button"><img src="img/hamburder.png" alt="Hamburger Menu"></div>
@@ -28,6 +29,7 @@
             <img src="img/logo.png" width="410" height="221">
         </div>
         <div class="navigation">
+            <a href="index.html" class="active">home</a>
             <a href="current.html">current releases</a>
             <a href="roster.html">roster</a>
             <a href="about.html">about us</a>
