--- a/artist.html
+++ b/artist.html
@@ -25,7 +25,7 @@
         <!-- rest of header content -->
     </header>
     <div class="main-content">
-        <div class="image-container">
+        <div class="image-container logo">
             <a href="index.html"><img src="img/logo.png" width="410" height="221"></a>
         </div>
         <div class="navigation">
