--- a/current.html
+++ b/current.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
-<body class="subpage">
+<body class="subpage current">
     <header>
         <div class="top-bar"></div>
         <nav class="hidden-navigation collapsed" style="transform: translateY(-100%)">
@@ -25,7 +25,7 @@
         <!-- rest of header content -->
     </header>
     <div class="main-content">
-        <div class="image-container">
+        <div class="image-container logo">
             <a href="index.html"><img src="img/logo.png" width="410" height="221"></a>
         </div>
         <div class="navigation">
