--- a/current.html
+++ b/current.html
@@ -132,6 +132,7 @@
                 <h3>Contact Us</h3>
                 <p>Email: example@example.com</p>
                 <p>Phone: 555-555-5555</p>
+                <p class="ig-footer"><a href="https://www.instagram.com/riotactmedia/"><img src="img/ig-white.png" alt="Instagram Icon" height="20" width="20" /> <span>Instagram</span></a></p>
             </div>
         </div>
         <div class="footer-bottom">
