--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <a href="#">work with us</a>
             <a href="#">testimonials</a>
         </div>
+         <div class="subheader-container">
+            <h2 class="subheader">our artists in the press</h2>
+            <hr class="subheader-line">
+        </div>
         <div class="image-grid">
             <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/IG/1.png"></a>
             <a href="https://www.instagram.com/riotactmedia/?hl=en"><img src="img/IG/2.png"></a>
@@ -75,6 +79,7 @@
                 <h3>Contact Us</h3>
                 <p>Email: example@example.com</p>
                 <p>Phone: 555-555-5555</p>
+                <p class="ig-footer"><a href="https://www.instagram.com/riotactmedia/"><img src="img/ig-white.png" alt="Instagram Icon" height="20" width="20" /> <span>Instagram</span></a></p>
             </div>
         </div>
         <div class="footer-bottom">
