--- a/current.html
+++ b/current.html
@@ -42,68 +42,100 @@
         </div>
         <div class="image-grid">
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/1.png"></a>
-                <a href="artist.html" class="image-title">2nd Grade</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/1.png"></a>
+                    <a href="artist.html" class="image-title">2nd Grade</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/2.png"></a>
-                <a href="artist.html" class="image-title">7ebra</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/2.png"></a>
+                    <a href="artist.html" class="image-title">7ebra</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/3.png"></a>
-                <a href="artist.html" class="image-title">All Things Blue</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/3.png"></a>
+                    <a href="artist.html" class="image-title">All Things Blue</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/4.png"></a>
-                <a href="artist.html" class="image-title">Anna Burch</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/4.png"></a>
+                    <a href="artist.html" class="image-title">Anna Burch</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/5.png"></a>
-                <a href="artist.html" class="image-title">Anna McClellan</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/5.png"></a>
+                    <a href="artist.html" class="image-title">Anna McClellan</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/6.png"></a>
-                <a href="artist.html" class="image-title">Attia Taylor</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/6.png"></a>
+                    <a href="artist.html" class="image-title">Attia Taylor</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/7.png"></a>
-                <a href="artist.html" class="image-title">Bloodlines</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/7.png"></a>
+                    <a href="artist.html" class="image-title">Bloodlines</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/8.png"></a>
-                <a href="artist.html" class="image-title">Blue Glass</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/8.png"></a>
+                    <a href="artist.html" class="image-title">Blue Glass</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/9.png"></a>
-                <a href="artist.html" class="image-title">Blvck Hippie</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/9.png"></a>
+                    <a href="artist.html" class="image-title">Blvck Hippie</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/10.png"></a>
-                <a href="artist.html" class="image-title">Bobbie Lovesong</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/10.png"></a>
+                    <a href="artist.html" class="image-title">Bobbie Lovesong</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/11.png"></a>
-                <a href="artist.html" class="image-title">Body/Dilloway/Head</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/11.png"></a>
+                    <a href="artist.html" class="image-title">Body/Dilloway/Head</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/12.png"></a>
-                <a href="artist.html" class="image-title">Bosque Brown</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/12.png"></a>
+                    <a href="artist.html" class="image-title">Bosque Brown</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/13.png"></a>
-                <a href="artist.html" class="image-title">Blvck Hippie</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/13.png"></a>
+                    <a href="artist.html" class="image-title">Blvck Hippie</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/14.png"></a>
-                <a href="artist.html" class="image-title">Bobbie Lovesong</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/14.png"></a>
+                    <a href="artist.html" class="image-title">Bobbie Lovesong</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/15.png"></a>
-                <a href="artist.html" class="image-title">Body/Dilloway/Head</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/15.png"></a>
+                    <a href="artist.html" class="image-title">Body/Dilloway/Head</a></div>
             </div>
             <div class="image-container">
-                <a href="artist.html"><img src="img/artists/16.png"></a>
-                <a href="artist.html" class="image-title">Bosque Brown</a>
+                <div class="artist-container">
+                    <h3>March 14</h3>
+                    <a href="artist.html"><img src="img/artists/16.png"></a>
+                    <a href="artist.html" class="image-title">Bosque Brown</a></div>
             </div>
             <!-- Repeat for remaining images -->
         </div>
