--- a/current.html
+++ b/current.html
@@ -43,99 +43,115 @@
         <div class="image-grid">
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>May 27, 2023</h3>
                     <a href="artist.html"><img src="img/artists/1.png"></a>
-                    <a href="artist.html" class="image-title">2nd Grade</a></div>
+                    <a href="artist.html" class="artist-name"><span>2nd Grade</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>May 21, 2023</h3>
                     <a href="artist.html"><img src="img/artists/2.png"></a>
-                    <a href="artist.html" class="image-title">7ebra</a></div>
+                    <a href="artist.html" class="artist-name"><span>7ebra</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>April 23, 2023</h3>
                     <a href="artist.html"><img src="img/artists/3.png"></a>
-                    <a href="artist.html" class="image-title">All Things Blue</a></div>
+                    <a href="artist.html" class="artist-name"><span>All Things Blue</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>April 20, 2023</h3>
                     <a href="artist.html"><img src="img/artists/4.png"></a>
-                    <a href="artist.html" class="image-title">Anna Burch</a></div>
+                    <a href="artist.html" class="artist-name"><span>Anna Burch</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>April 4, 2023</h3>
                     <a href="artist.html"><img src="img/artists/5.png"></a>
-                    <a href="artist.html" class="image-title">Anna McClellan</a></div>
+                    <a href="artist.html" class="artist-name"><span>Anna McClellan</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>April 2, 2023</h3>
                     <a href="artist.html"><img src="img/artists/6.png"></a>
-                    <a href="artist.html" class="image-title">Attia Taylor</a></div>
+                    <a href="artist.html" class="artist-name"><span>Attia Taylor</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>March 31, 2023</h3>
                     <a href="artist.html"><img src="img/artists/7.png"></a>
-                    <a href="artist.html" class="image-title">Bloodlines</a></div>
+                    <a href="artist.html" class="artist-name"><span>Bloodlines</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>March 27, 2023</h3>
                     <a href="artist.html"><img src="img/artists/8.png"></a>
-                    <a href="artist.html" class="image-title">Blue Glass</a></div>
+                    <a href="artist.html" class="artist-name"><span>Blue Glass</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>March 24, 2023</h3>
                     <a href="artist.html"><img src="img/artists/9.png"></a>
-                    <a href="artist.html" class="image-title">Blvck Hippie</a></div>
+                    <a href="artist.html" class="artist-name"><span>Blvck Hippie</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>March 21, 2023</h3>
                     <a href="artist.html"><img src="img/artists/10.png"></a>
-                    <a href="artist.html" class="image-title">Bobbie Lovesong</a></div>
+                    <a href="artist.html" class="artist-name"><span>Bobbie Lovesong</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>March 17, 2023</h3>
                     <a href="artist.html"><img src="img/artists/11.png"></a>
-                    <a href="artist.html" class="image-title">Body/Dilloway/Head</a></div>
+                    <a href="artist.html" class="artist-name"><span>Dilloway/Head</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>March 15, 2023</h3>
                     <a href="artist.html"><img src="img/artists/12.png"></a>
-                    <a href="artist.html" class="image-title">Bosque Brown</a></div>
+                    <a href="artist.html" class="artist-name"><span>Bosque Brown</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>March 14, 2023</h3>
                     <a href="artist.html"><img src="img/artists/13.png"></a>
-                    <a href="artist.html" class="image-title">Blvck Hippie</a></div>
+                    <a href="artist.html" class="artist-name"><span>Blvck Hippie</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>March 10, 2023</h3>
                     <a href="artist.html"><img src="img/artists/14.png"></a>
-                    <a href="artist.html" class="image-title">Bobbie Lovesong</a></div>
+                    <a href="artist.html" class="artist-name"><span>Bobbie Lovesong</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>March 5, 2023</h3>
                     <a href="artist.html"><img src="img/artists/15.png"></a>
-                    <a href="artist.html" class="image-title">Body/Dilloway/Head</a></div>
+                    <a href="artist.html" class="artist-name"><span>Dilloway/Head</span>Album Title</a>
+                </div>
             </div>
             <div class="image-container">
                 <div class="artist-container">
-                    <h3>March 14</h3>
+                    <h3>March 1, 2023</h3>
                     <a href="artist.html"><img src="img/artists/16.png"></a>
-                    <a href="artist.html" class="image-title">Bosque Brown</a></div>
+                    <a href="artist.html" class="artist-name"><span>Bosque Brown</span>Album Title</a>
+                </div>
             </div>
             <!-- Repeat for remaining images -->
         </div>
@@ -158,7 +174,7 @@
                 <h3>Contact Us</h3>
                 <p>Email: example@example.com</p>
                 <p>Phone: 555-555-5555</p>
-                <p class="ig-footer"><a href="https://www.instagram.com/riotactmedia/"><img src="img/ig-white.png" alt="Instagram Icon" height="20" width="20" /> <span>Instagram</span></a></p>
+                <p class="ig-footer"><a href="https://www.instagram.com/riotactmedia/"><img src="img/ig-white.png" alt="Instagram Icon" height="20" width="20" /> <span>Instagram</span>Album Title</a></p>
             </div>
         </div>
         <div class="footer-bottom">
