Changes to upcoming releases

--- a/current.html
+++ b/current.html
@@ -71,31 +71,31 @@
                     </tr>
                     <tr>
                         <td><a href="artist.html"><img src="img/artists/4.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Anna Burch</a></td>
                         <td><a href="artist.html">Album Title</a></td>
                         <td><a href="artist.html">Label Name</a></td>
                     </tr>
                     <tr>
                         <td><a href="artist.html"><img src="img/artists/5.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Anna McClellan</a></td>
                         <td><a href="artist.html">Album Title</a></td>
                         <td><a href="artist.html">Label Name</a></td>
                     </tr>
                     <tr>
                         <td><a href="artist.html"><img src="img/artists/6.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Attia Taylor</a></td>
                         <td><a href="artist.html">Album Title</a></td>
                         <td><a href="artist.html">Label Name</a></td>
                     </tr>
                     <tr>
                         <td><a href="artist.html"><img src="img/artists/7.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Bloodlines</a></td>
                         <td><a href="artist.html">Album Title</a></td>
                         <td><a href="artist.html">Label Name</a></td>
                     </tr>
                     <tr>
                         <td><a href="artist.html"><img src="img/artists/8.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Blue Glass</a></td>
                         <td><a href="artist.html">Album Title</a></td>
                         <td><a href="artist.html">Label Name</a></td>
                     </tr>
@@ -119,52 +119,29 @@
                 <tbody>
                     <tr>
                         <td><a href="artist.html"><img src="img/artists/9.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Blvck Hippie</a></td>
                         <td><a href="artist.html">Album Title</a></td>
                         <td><a href="artist.html">Label Name</a></td>
                     </tr>
                     <tr>
                         <td><a href="artist.html"><img src="img/artists/10.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Bobbie Lovesong</a></td>
                         <td><a href="artist.html">Album Title</a></td>
                         <td><a href="artist.html">Label Name</a></td>
                     </tr>
                     <tr>
                         <td><a href="artist.html"><img src="img/artists/11.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Dilloway/Head</a></td>
                         <td><a href="artist.html">Album Title</a></td>
                         <td><a href="artist.html">Label Name</a></td>
                     </tr>
                     <tr>
                         <td><a href="artist.html"><img src="img/artists/12.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Bosque Brown</a></td>
                         <td><a href="artist.html">Album Title</a></td>
                         <td><a href="artist.html">Label Name</a></td>
                     </tr>
-                    <tr>
-                        <td><a href="artist.html"><img src="img/artists/13.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
-                        <td><a href="artist.html">Album Title</a></td>
-                        <td><a href="artist.html">Label Name</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="artist.html"><img src="img/artists/14.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
-                        <td><a href="artist.html">Album Title</a></td>
-                        <td><a href="artist.html">Label Name</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="artist.html"><img src="img/artists/15.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
-                        <td><a href="artist.html">Album Title</a></td>
-                        <td><a href="artist.html">Label Name</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="artist.html"><img src="img/artists/16.png" class="album-art"> <span>May 27, 2023</span></a></td>
-                        <td><a href="artist.html">Artist Name</a></td>
-                        <td><a href="artist.html">Album Title</a></td>
-                        <td><a href="artist.html">Label Name</a></td>
-                    </tr>
+
                     <!-- Repeat for remaining releases -->
                 </tbody>
             </table>
